log
Wed, Mar 26, 2025  9:15:36 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  6:41:52 PM: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9c54420
Thu, Mar 27, 2025  6:45:09 PM: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
9186b18
Thu, Mar 27, 2025  6:47:06 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
c4237b7
